@@ -69,11 +69,12 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:8080"
-        ));
-
+        // configuration.setAllowedOrigins(Arrays.asList(
+        //     "http://localhost:3000",
+        //     "http://localhost:8080",
+        //     "http://localhost:5173"
+        // ));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
 
         configuration.setAllowedMethods(Arrays.asList(
